[metadata]
name = tune
version = 2016.1
summary = xiexianbin
description-file =
    README.rst
author = xiexianbin
author-email = me@xiexianbin.cn
home-page = http://www.xiexianbin.cn/
classifier =
    Environment :: xiexianbin
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    tune

[entry_points]


[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = tune/locale
domain = tune

[update_catalog]
domain = tune
output_dir = tune/locale
input_file = tune/locale/tune.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = tune/locale/tune.pot

[wheel]
universal = 1

[pbr]
autodoc_index_modules = 0
warnerrors = true
